--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@netlify/functions": "^2.8.2",
     "eslint-plugin-react": "^7.37.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "use-local-storage": "^3.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
