--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-plugin-react": "^7.37.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "use-local-storage": "^3.0.0"
   },
   "devDependencies": {
