--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@netlify/blobs": "^8.1.0",
     "@netlify/functions": "^2.8.2",
+    "dotenv": "^17.2.2",
     "eslint-plugin-react": "^7.37.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
